k8s-manifests/astro/service.yml
apiVersion: v1
kind: Service
metadata:
  name: astro-frontend
  namespace: tunenumbers
spec:
  type: ClusterIP
  ports:
    - port: 4321
      targetPort: 4321
  selector:
    app: astro-frontend
