k8s-manifests/astro/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astro-ingress
  namespace: tunenumbers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: tunenumbers-crowdsec-bouncer@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tunenumbers.de
      secretName: astro-tls
  rules:
    - host: tunenumbers.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astro-frontend
                port:
                  number: 4321
